<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.bg.wheathercheck.view.ui.wheatherdetails.MapsFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_maps" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_wether_details"
            app:destination="@id/navigation_wether_details" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.bg.wheathercheck.view.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_help"
        android:name="com.bg.wheathercheck.view.ui.help.HelpFragment"
        android:label="@string/title_help"
        tools:layout="@layout/fragment_help" />

    <fragment
        android:id="@+id/navigation_wether_details"
        android:name="com.bg.wheathercheck.view.ui.wheatherdetails.WeatherDetailsFragment"
        android:label="@string/title_weather_details"
        tools:layout="@layout/wheather_details_fragment" >
        <action
            android:id="@+id/action_navigation_wether_details_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>


</navigation>