<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <data>
        <variable
            name="cityWeatherObj"
            type="com.bg.wheathercheck.model.CityWeatherObj" />


        <variable
            name="utils"
            type="com.bg.wheathercheck.utils.AppUtils" />



    </data>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layoutDirection="locale"
        tools:context=".ui.activity.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">



    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinator_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView

        android:id="@+id/nested_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        android:visibility="visible"
        tools:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:descendantFocusability="blocksDescendants"
            android:orientation="vertical">



            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@{cityWeatherObj.name}"
                android:hint="@string/city_name"
                android:layout_marginTop="@dimen/margin_medium"
                android:textSize="24sp"
                android:textColor="@color/color_plate_4"
                android:textStyle="bold" />


            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/current_label"
                android:visibility="gone"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                android:textColor="@color/material_blue"
                android:textStyle="bold" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/todayMaterialCard"
                android:clickable="true"
                android:focusable="true"
                android:layout_marginTop="@dimen/margin_medium"
                style="@style/Widget.MaterialComponents.CardView"
                android:layout_width="match_parent"
                android:layout_height="@dimen/card_view_height"
                android:layout_marginStart="@dimen/margin_mlarge"
                android:layout_marginEnd="@dimen/margin_mlarge"
                app:cardBackgroundColor="@color/material_blue"
                app:cardCornerRadius="30dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingTop="@dimen/margin_medium">

                    <TextSwitcher
                        android:id="@+id/temp_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layoutDirection="ltr"
                        android:layout_gravity="center" />

                    <TextSwitcher
                        android:id="@+id/description_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="@dimen/margin_large"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:layout_gravity="center_horizontal"
                            android:orientation="vertical">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="top"
                                android:orientation="vertical"
                                android:paddingLeft="@dimen/margin_middle"
                               >
                                <androidx.appcompat.widget.AppCompatTextView
                                    style="@style/TextViewInColoredCard"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:gravity="center"

                                    android:textSize="18sp"
                                    android:text="@string/temperature"
                                    android:textStyle="bold" />
                                <androidx.appcompat.widget.AppCompatTextView
                                    style="@style/TextViewInColoredCard"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:gravity="center"
                                    android:hint="@string/humidity"
                                    android:textSize="32sp"
                                    android:text="@{(utils.convertKelvinToCelsius(cityWeatherObj.main.temp))+ ` c`}"
                                    android:textStyle="bold" />


                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:paddingLeft="@dimen/margin_middle"
                                android:orientation="vertical"
                               >


                                <androidx.appcompat.widget.AppCompatTextView
                                    style="@style/TextViewInColoredCard"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:gravity="center"

                                    android:textSize="18sp"
                                    android:text="@string/wind"
                                    android:textStyle="bold" />

                                <androidx.appcompat.widget.AppCompatTextView
                                    style="@style/TextViewInColoredCard"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:gravity="center"
                                    android:text="@{utils.convertIntToString(cityWeatherObj.wind.deg)}"
                                    android:hint="@string/wind"
                                    android:textSize="@dimen/textsize_26sp"
                                    android:textStyle="bold" />


                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:paddingLeft="@dimen/margin_middle"
                                android:orientation="vertical"
                                >


                                <androidx.appcompat.widget.AppCompatTextView
                                    style="@style/TextViewInColoredCard"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:gravity="center"

                                    android:textSize="12sp"
                                    android:text="@string/weather_type"
                                    android:textStyle="bold" />

                                <androidx.appcompat.widget.AppCompatTextView
                                    style="@style/TextViewInColoredCard"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:gravity="center"
                                    android:text="@{cityWeatherObj.weather.get(0).description}"
                                    android:hint="@string/weather_type"
                                    android:textSize="18sp"
                                    android:textStyle="bold" />


                            </LinearLayout>
                        </LinearLayout>


                        <com.airbnb.lottie.LottieAnimationView
                            android:id="@+id/animation_view"
                            android:layout_width="0dp"
                            android:layout_height="140dp"
                            android:layout_weight="1"
                            app:lottie_autoPlay="true"
                            app:lottie_imageAssetsFolder="clear_sky.json"
                            app:image="@{cityWeatherObj.weather.get(0).main}"
                            app:lottie_loop="true" />

                    </LinearLayout>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/margin_large" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_mlarge"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/next_4_days_hourly"
                    android:textSize="22sp"/>

                <View
                    android:layout_width="0dp"
                    android:layout_height="@dimen/margin_medium" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:orientation="horizontal" />

            </LinearLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

        <com.google.android.material.bottomappbar.BottomAppBar
            android:id="@+id/bar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_gravity="bottom"
            android:layout_marginBottom="@dimen/margin_xxlarge"
            app:backgroundTint="?attr/colorPrimary"
            app:navigationIcon="@drawable/ic_information" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/next_days_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/next_15_days_label"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            app:backgroundTint="@color/material_blue"
            app:layout_anchor="@id/bar"
            app:strokeColor="@android:color/white" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
    </LinearLayout>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>




</layout>

