<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <data>
        <variable
            name="cityWeatherObj"
            type="com.bg.wheathercheck.model.ListItem" />
        <variable
            name="appUtils"
            type="com.bg.wheathercheck.utils.AppUtils" />



    </data>

    <LinearLayout
        android:id="@+id/root_layout"
        android:layout_width="120dp"
        android:layout_height="200dp"
        android:layout_marginEnd="@dimen/margin_large"
        android:layoutDirection="locale"
        android:orientation="vertical"
        android:paddingBottom="@dimen/margin_medium">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_view"
            style="@style/Widget.MaterialComponents.CardView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            app:cardCornerRadius="20dp">
         <!--   app:cardBackgroundCustom="@{appUtils.getDayName(cityWeatherObj.dt_txt)}"-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/day_name_text_view"
                    style="@style/TextViewInColoredCard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:hint="@string/day"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:text="@{appUtils.getDayName(cityWeatherObj.dt_txt)}"
                    android:textStyle="bold" />


                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/animation_view"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_weight="1"
                    app:lottie_autoPlay="true"
                    app:lottie_imageAssetsFolder="clear_sky.json"
                    app:image="@{cityWeatherObj.weather.get(0).main}"
                    app:lottie_loop="true" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/temp_text_view"
                    style="@style/TextViewInColoredCard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@{appUtils.getConvertedTemp(cityWeatherObj.main.temp)}"
                    android:layoutDirection="ltr"
                    android:hint="@string/temp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:orientation="vertical">

                        <androidx.appcompat.widget.AppCompatImageView
                            style="@style/IconInColoredCard"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:gravity="center"
                            app:srcCompat="@drawable/ic_down_arrow" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/min_temp_text_view"
                            style="@style/SubTextViewInColoredCard"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@{appUtils.getConvertedTemp(cityWeatherObj.main.temp_min)}"
                            android:gravity="center"
                            android:hint="@string/mintemp"
                            android:layoutDirection="ltr" />
                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:orientation="vertical">

                        <androidx.appcompat.widget.AppCompatImageView
                            style="@style/IconInColoredCard"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:gravity="center"
                            app:srcCompat="@drawable/ic_up_arrow" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/max_temp_text_view"
                            style="@style/TextViewInColoredCard"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:hint="@string/maxtemp"
                            android:text="@{appUtils.getConvertedTemp(cityWeatherObj.main.temp_max)}"
                            android:layoutDirection="ltr" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <View
            android:id="@+id/shadow_view"
            android:layout_width="match_parent"
            android:layout_height="15dp" />
    </LinearLayout>

</layout>
